<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa"
        tools:context=".login">


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_centerInParent="true" android:paddingTop="100dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:fontFamily="@font/ptsans"
                android:textSize="30sp"
                android:text="@string/Login"
                android:textStyle="bold"
                android:textColor="#2A3950" android:layout_marginStart="3dp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="20dp">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username" android:textColor="#2A3950" android:textColorHint="#2A3950"
                    android:fontFamily="@font/ptsans" android:textSize="19sp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColor="#2A3950"
                    android:textColorHint="#2A3950"
                    android:fontFamily="@font/ptsans"
                    android:textSize="19sp" android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="@string/Login2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button2" android:layout_marginTop="30dp"
                android:background="@drawable/login_button" android:textColor="#fff"
                android:fontFamily="@font/barlow_semi" android:onClick="login1"/>
    </LinearLayout>
</RelativeLayout>