<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <RelativeLayout
            android:id="@+id/image_holder"
            android:layout_width="match_parent"
            android:elevation="10dp"
            android:background="@color/colorPrimary"
            android:layout_height="130dp" tools:targetApi="lollipop">
        <TextView
                android:text="@string/rating2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:textSize="20sp" android:textColor="#fff"
                android:fontFamily="@font/barlow"
                android:layout_alignStart="@+id/textView"
                android:layout_below="@+id/textView"/>
        <TextView
                android:text="@string/ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_alignParentStart="true"
                android:layout_marginStart="23dp" android:layout_alignParentTop="true" android:layout_marginTop="18dp"
                android:id="@+id/textView" android:textSize="25sp" android:textColor="#fff"
                android:fontFamily="@font/barlow_semi"/>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/ratings_recyclerview"
            android:elevation="15dp"
            android:background="@drawable/background_white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp" tools:targetApi="lollipop" android:paddingTop="30dp">


    </android.support.v7.widget.RecyclerView>
    <android.support.design.widget.FloatingActionButton
            app:elevation="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/review"
            android:src="@drawable/ic_delete" android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp" android:layout_alignParentBottom="true"
            android:layout_marginBottom="25dp" android:id="@+id/floatingActionButton"
            app:fabSize="normal" app:rippleColor="#fff" android:onClick="deleteRatings" android:clickable="true"/>
</RelativeLayout>